@@ -226,9 +226,9 @@ public abstract class HierarchyWizardModelGrouping<T> extends HierarchyWizardMod
                 }
                 
                 if (equals(type, DataType.INTEGER)) {
-                    max = dtype.add(max, (T)new Long(1)); // Add 1
+                    max = dtype.add(max, (T)Long.valueOf(1l)); // Add 1
                 } else if (equals(type, DataType.DECIMAL)) {
-                    max = dtype.add(max, (T)new Double(1)); // Add 1
+                    max = dtype.add(max, (T)Double.valueOf(1d)); // Add 1
                 } else if (equals(type, DataType.DATE)) {
                     max = dtype.add(max, (T)new Date(3600l * 1000l)); // Add 1 day
                 }
